--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ $cardNavBgColor: #171B20; */
   padding: 0;
   box-sizing: border-box;
 }
+h1 {
+  text-align: center;
+}
 .container {
   color: white;
   background-color: crimson;
